force-app/main/default/objects/CJFW_SurveyResponse__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Response</relationshipLabel>
    <relationshipName>Survey_Response</relationshipName>
    <type>Lookup</type>
</CustomField>