force-app/main/default/objects/CJFW_SurveyResponse__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>잠재고객</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Survey Response</relationshipLabel>
    <relationshipName>Survey_Response</relationshipName>
    <type>Lookup</type>
</CustomField>