force-app/main/default/objects/CJFW_SurveyResponse__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>영업기회</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Consulting</relationshipLabel>
    <relationshipName>Survey_Response</relationshipName>
    <type>Lookup</type>
</CustomField>