force-app/main/default/objects/CJFW_SurveyResponse__c/fields/ResponseDate__c.field-meta.xml
<CustomField>
    <fullName>ResponseDate__c</fullName>
    <description>응답일</description>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>