force-app/main/default/objects/CJFW_SurveyResponse__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>설문지</description>
    <label>Survey</label>
    <referenceTo>CJFW_Survey__c</referenceTo>
    <relationshipLabel>Survey Response</relationshipLabel>
    <relationshipName>Survey_Response</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>